# attila-demo

./: .gitignore  .gitmodules  CNAME  LICENSE  Makefile  README.md  archives.html  authors.html  categories.html  catgegories.html  fabfile.py  index.html  pelicanconf.py  publishconf.py  pyproject.toml  sitemap.xml  tags.html  tasks.py
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: publish-to-gh-pages.yml
2015/: index.html
2015/11/: code-blocks-for-markdown.html  code-blocks.html  featured-color-header-view.html  featured-images-for-the-detail-view.html  headlines-blockquotes-images.html  index.html  lists-and-tables.html  welcome-to-ghost.html
archive/: index.html
assets/css/: myblog.css
author/: index.html
author/pelican/: index.html
author/zutrinken/: index.html
category/: index.html
category/examples/: index.html
category/misc/: index.html
content/: code-block-markdown.md  code-blocks.rst  featured-color-header-view.rst  featured-images-for-the-detail-view.md  featured-images-for-the-detail-view.rst  headlines-blockquotes-images.rst  lists-and-tables.rst  pelican-obsidian-example.md  welcome-to-ghost.rst
content/pages/: about.rst
feeds/: all-en.atom.xml  all.atom.xml  examples.atom.xml  misc.atom.xml
feeds/author/: pelican.atom.xml  zutrinken.atom.xml
feeds/tag/: cupcake.atom.xml  general.atom.xml  getting-started.atom.xml
page/2/: index.html
page/3/: index.html
pages/about/: index.html
tag/: index.html
tag/cupcake/: index.html
tag/general/: index.html
(+17 files in other folders)
